k8s-manifests/gateway-etc.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: webapp
spec:
  hosts:
    - '*'
  gateways:
    - istio-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: fleetman-webapp.default.svc.cluster.local
      weight: 100
    websocketUpgrade: true
